src/styles/body.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.nav_bar {
    display: flex;
    width: 100%;
    height: 50px;
    align-items: center;
    margin-left: 20px;
}

.spacing {
    width: 100%;
    height: 150px;
}

.refresh {
    height: 100px;
}

/* to add more color themes, change here */

body {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    transition: 0.2s;
    background-color: #282828;
    color: white;
}

.main {
    display: flex;
    justify-content: center;
    align-items: center;
    /* flex-direction: column; */
    /* height: 300px; */
}

